force-app/main/default/objects/DefaultMailTemplate__c/DefaultMailTemplate__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>デフォルトメールテンプレート</label>
</CustomObject>