force-app/main/default/objects/DefaultMailTemplate__c/fields/ApprovalContactChange__c.field-meta.xml
<CustomField>
    <fullName>ApprovalContactChange__c</fullName>
    <label>承認後連絡（入替）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>