force-app/main/default/objects/DefaultMailTemplate__c/fields/ApprovalContactNM__c.field-meta.xml
<CustomField>
    <fullName>ApprovalContactNM__c</fullName>
    <label>承認後連絡（新規/不動産/通常）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>