force-app/main/default/objects/DefaultMailTemplate__c/fields/ApprovalContactNMContractorChange__c.field-meta.xml
<CustomField>
    <fullName>ApprovalContactNMContractorChange__c</fullName>
    <label>承認後連絡（新規/不動産/名変）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>