force-app/main/default/objects/DefaultMailTemplate__c/fields/ApprovalContactNMParking__c.field-meta.xml
<CustomField>
    <fullName>ApprovalContactNMParking__c</fullName>
    <label>承認後連絡（新規/不動産/駐車場）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>