force-app/main/default/objects/DefaultMailTemplate__c/fields/ApprovalProxyContactNMContractorChange__c.field-meta.xml
<CustomField>
    <fullName>ApprovalProxyContactNMContractorChange__c</fullName>
    <label>承認後連絡（新規/社員/名変）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>