force-app/main/default/objects/DefaultMailTemplate__c/fields/AutoSendLeaveGuidance__c.field-meta.xml
<CustomField>
    <fullName>AutoSendLeaveGuidance__c</fullName>
    <label>自動退去案内</label>
    <length>255</length>
    <type>Text</type>
</CustomField>