force-app/main/default/objects/DefaultMailTemplate__c/fields/BrrowerReceiptReminderRenewal__c.field-meta.xml
<CustomField>
    <fullName>BrrowerReceiptReminderRenewal__c</fullName>
    <label>借主控え督促（更新）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>