force-app/main/default/objects/DefaultMailTemplate__c/fields/ConditionConfirmationRequestForm__c.field-meta.xml
<CustomField>
    <fullName>ConditionConfirmationRequestForm__c</fullName>
    <label>条件確認依頼書</label>
    <length>255</length>
    <type>Text</type>
</CustomField>