force-app/main/default/objects/DefaultMailTemplate__c/fields/ConfirmationDunningApplication__c.field-meta.xml
<CustomField>
    <fullName>ConfirmationDunningApplication__c</fullName>
    <label>確認書自動督促</label>
    <length>255</length>
    <type>Text</type>
</CustomField>