force-app/main/default/objects/DefaultMailTemplate__c/fields/ContactAccountGarageCertification__c.field-meta.xml
<CustomField>
    <fullName>ContactAccountGarageCertification__c</fullName>
    <description>SNT決裁後に企業へ連絡する</description>
    <label>企業へ連絡(車庫証明)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>