force-app/main/default/objects/DefaultMailTemplate__c/fields/ContactAccountRenewal__c.field-meta.xml
<CustomField>
    <fullName>ContactAccountRenewal__c</fullName>
    <label>企業に連絡(更新業務)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>