force-app/main/default/objects/DefaultMailTemplate__c/fields/ContractChangeGuidance__c.field-meta.xml
<CustomField>
    <fullName>ContractChangeGuidance__c</fullName>
    <label>名変案内</label>
    <length>255</length>
    <type>Text</type>
</CustomField>