force-app/main/default/objects/DefaultMailTemplate__c/fields/DecisionContactToEmployee__c.field-meta.xml
<CustomField>
    <fullName>DecisionContactToEmployee__c</fullName>
    <label>決定連絡（企業社員向け）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>