force-app/main/default/objects/DefaultMailTemplate__c/fields/FivePieceSetReminder__c.field-meta.xml
<CustomField>
    <fullName>FivePieceSetReminder__c</fullName>
    <label>5点セット督促依頼</label>
    <length>255</length>
    <type>Text</type>
</CustomField>