force-app/main/default/objects/DefaultMailTemplate__c/fields/GreetingMailUnnecessaryAgencyDecisi__c.field-meta.xml
<CustomField>
    <fullName>GreetingMailUnnecessaryAgencyDecisi__c</fullName>
    <label>挨拶連絡(不要/物件決定済)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>