force-app/main/default/objects/DefaultMailTemplate__c/fields/InvoiceReceipt__c.field-meta.xml
<CustomField>
    <fullName>InvoiceReceipt__c</fullName>
    <label>請求書受領済み</label>
    <length>255</length>
    <type>Text</type>
</CustomField>