force-app/main/default/objects/DefaultMailTemplate__c/fields/LegalApplicationApprovalContactCondition__c.field-meta.xml
<CustomField>
    <fullName>LegalApplicationApprovalContactCondition__c</fullName>
    <label>リーガル申請_承認後連絡(条件変更)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>