force-app/main/default/objects/DefaultMailTemplate__c/fields/LegalApplicationApprovalContactNewMatter__c.field-meta.xml
<CustomField>
    <fullName>LegalApplicationApprovalContactNewMatter__c</fullName>
    <label>リーガル申請_承認後連絡(新規)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>