force-app/main/default/objects/DefaultMailTemplate__c/fields/LegalApplicationApprovalContactRenewal__c.field-meta.xml
<CustomField>
    <fullName>LegalApplicationApprovalContactRenewal__c</fullName>
    <label>リーガル申請_承認後連絡(更新)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>