force-app/main/default/objects/DefaultMailTemplate__c/fields/MediationRequestSend__c.field-meta.xml
<CustomField>
    <fullName>MediationRequestSend__c</fullName>
    <label>斡旋依頼送付</label>
    <length>255</length>
    <type>Text</type>
</CustomField>