force-app/main/default/objects/DefaultMailTemplate__c/fields/OnHoldCansellationRealEstateDecision__c.field-meta.xml
<CustomField>
    <fullName>OnHoldCansellationRealEstateDecision__c</fullName>
    <label>保留解除物件決定</label>
    <length>255</length>
    <type>Text</type>
</CustomField>