force-app/main/default/objects/DefaultMailTemplate__c/fields/OnHoldNoticeDecisionApproval__c.field-meta.xml
<CustomField>
    <fullName>OnHoldNoticeDecisionApproval__c</fullName>
    <label>保留通知決裁承認</label>
    <length>255</length>
    <type>Text</type>
</CustomField>