force-app/main/default/objects/DefaultMailTemplate__c/fields/OnHoldNoticeRealEstateDecision__c.field-meta.xml
<CustomField>
    <fullName>OnHoldNoticeRealEstateDecision__c</fullName>
    <label>保留通知物件決定</label>
    <length>255</length>
    <type>Text</type>
</CustomField>