force-app/main/default/objects/DefaultMailTemplate__c/fields/OtherDecisionContact__c.field-meta.xml
<CustomField>
    <fullName>OtherDecisionContact__c</fullName>
    <label>他決連絡</label>
    <length>255</length>
    <type>Text</type>
</CustomField>