force-app/main/default/objects/DefaultMailTemplate__c/fields/RefundBankAccountApplication__c.field-meta.xml
<CustomField>
    <fullName>RefundBankAccountApplication__c</fullName>
    <label>返金口座案内</label>
    <length>255</length>
    <type>Text</type>
</CustomField>