force-app/main/default/objects/DefaultMailTemplate__c/fields/ReminderConditionConfirmation__c.field-meta.xml
<CustomField>
    <fullName>ReminderConditionConfirmation__c</fullName>
    <label>条件確認依頼書自動督促</label>
    <length>255</length>
    <type>Text</type>
</CustomField>